perf: fix LCP - hardcoded hero preload, fix health endpoint, remove content-visibility, CLS min-height

--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -5,6 +5,7 @@
   &-dark {
     background: var(--color-dark-secondary);
     color: var(--color-white);
+    min-height: 500px;
   }
 }
 
